--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "version": "2.0.0",
   "author": "Derk-Jan Karrenbeld <derk-jan@xpbytes.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
     "@github/g-emoji-element": "^0.2.0",
     "@webcomponents/custom-elements": "^1.2.2",
+    "details-dialog-element": "^3.0.0",
+    "details-element-polyfill": "^2.3.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.3.15",
     "gatsby-image": "^2.0.37",
+    "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-manifest": "^2.0.27",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
