--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
     "@github/g-emoji-element": "^0.2.0",
+    "@mdx-js/mdx": "^0.20.3",
+    "@mdx-js/tag": "^0.20.3",
     "@webcomponents/custom-elements": "^1.2.2",
     "details-dialog-element": "^3.0.0",
     "details-element-polyfill": "^2.3.1",
@@ -16,6 +18,7 @@
     "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.3.15",
     "gatsby-image": "^2.0.37",
+    "gatsby-mdx": "^0.4.5",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-manifest": "^2.0.27",
     "gatsby-plugin-offline": "^2.0.25",
@@ -25,6 +28,7 @@
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-graphql": "2.0.15",
     "gatsby-transformer-json": "^2.1.11",
+    "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -37,7 +41,8 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "prettier": "^1.16.4",
-    "typescript": "^3.4.2"
+    "typescript": "^3.4.2",
+    "typescript-styled-plugin": "^0.14.0"
   },
   "keywords": [
     "gatsby"
