--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-image": "^2.0.37",
     "gatsby-mdx": "^0.4.5",
     "gatsby-plugin-emotion": "^4.0.6",
+    "gatsby-plugin-fathom": "^1.0.4",
     "gatsby-plugin-manifest": "^2.0.27",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
