--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-typescript": "^2.0.12",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-graphql": "2.0.15",
     "gatsby-transformer-json": "^2.1.11",
