--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-mdx": "^0.4.5",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-fathom": "^1.0.4",
+    "gatsby-plugin-force-trailing-slashes": "^1.0.4",
     "gatsby-plugin-manifest": "^2.0.27",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
