--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.3.15",
     "gatsby-image": "^2.0.37",
     "gatsby-mdx": "^0.4.5",
+    "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-fathom": "^1.0.4",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
