--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-typescript": "^2.0.12",
+    "gatsby-plugin-use-dark-mode": "^1.1.0",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-graphql": "2.0.15",
@@ -37,7 +38,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-toggle": "^4.0.2",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.8",
