--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-typescript": "^2.0.12",
     "gatsby-plugin-use-dark-mode": "^1.1.0",
     "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.0.10",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-graphql": "2.0.15",
     "gatsby-transformer-json": "^2.1.11",
