Articles, index pages and images for trailervote

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@github/g-emoji-element": "^0.2.0",
     "@mdx-js/mdx": "^0.20.3",
     "@mdx-js/tag": "^0.20.3",
+    "@sindresorhus/slugify": "^0.9.1",
     "@webcomponents/custom-elements": "^1.2.2",
     "details-dialog-element": "^3.0.0",
     "details-element-polyfill": "^2.3.1",
@@ -31,11 +32,13 @@
     "gatsby-plugin-use-dark-mode": "^1.1.0",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-prismjs": "^3.2.9",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-graphql": "2.0.15",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.17",
+    "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -45,6 +48,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.8",
+    "@types/react-toggle": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
@@ -60,7 +64,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
