--- a/package.json
+++ b/package.json
@@ -2,60 +2,60 @@
   "name": "xpbytes",
   "private": true,
   "description": "Website for XPBytes.com",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "author": "Derk-Jan Karrenbeld <derk-jan@xpbytes.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled": "^10.0.12",
-    "@github/g-emoji-element": "^1.0.1",
-    "@mdx-js/mdx": "^1.0.20",
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "@github/g-emoji-element": "^1.1.2",
+    "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/tag": "^0.20.3",
     "@sindresorhus/slugify": "^0.9.1",
-    "@webcomponents/custom-elements": "^1.2.4",
+    "@webcomponents/custom-elements": "^1.3.2",
     "details-dialog-element": "^3.0.3",
-    "details-element-polyfill": "^2.3.1",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "gatsby": "^2.9.4",
-    "gatsby-image": "^2.1.2",
+    "details-element-polyfill": "^2.4.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.0",
+    "gatsby": "^2.18.25",
+    "gatsby-image": "^2.2.39",
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-dark-mode": "^1.1.0",
-    "gatsby-plugin-emotion": "^4.0.7",
-    "gatsby-plugin-fathom": "^1.0.4",
+    "gatsby-plugin-emotion": "^4.1.21",
+    "gatsby-plugin-fathom": "^1.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.4",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.3",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.1.5",
-    "gatsby-plugin-typescript": "^2.0.15",
+    "gatsby-plugin-manifest": "^2.2.37",
+    "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-plugin-typescript": "^2.1.26",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.0.16",
-    "gatsby-remark-prismjs": "^3.2.11",
-    "gatsby-source-filesystem": "^2.0.39",
-    "gatsby-source-graphql": "2.0.19",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-remark": "^2.4.0",
-    "gatsby-transformer-sharp": "^2.1.21",
-    "prismjs": "^1.16.0",
+    "gatsby-remark-images": "^3.1.42",
+    "gatsby-remark-prismjs": "^3.3.30",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-graphql": "2.1.31",
+    "gatsby-transformer-json": "^2.2.25",
+    "gatsby-transformer-remark": "^2.6.48",
+    "gatsby-transformer-sharp": "^2.3.13",
+    "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-toggle": "^4.0.2",
+    "react-toggle": "^4.1.1",
     "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
-    "@types/react-helmet": "^5.0.8",
+    "@types/react-helmet": "^5.0.15",
     "@types/react-toggle": "^4.0.2",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^5.0.0",
-    "gatsby-remark-autolink-headers": "^2.0.18",
-    "prettier": "^1.18.2",
-    "typescript": "^3.5.2",
-    "typescript-styled-plugin": "^0.14.0"
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "gatsby-remark-autolink-headers": "^2.1.23",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5",
+    "typescript-styled-plugin": "^0.15.0"
   },
   "keywords": [
     "gatsby"
@@ -71,9 +71,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/xpbytes/xpbytes.com"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/xpbytes/xpbytes.com/issues"
   }
 }
